Karte mit Kitas

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,8 +1,14 @@
 defaults: &defaults
   app_name: 'OpenData Bremen'
+  host: bremen.dev
+  js_logging: false
+  default_latitude: 53.07498
+  default_longitude: 8.8072
+  google_maps_api_key: ABQIAAAAcIz016TRYiMH1KvissP1SxS8LUmBBxjxoxaGUy-MjULCj7hntBRRt0mrQ4Gz3FCuoPVPBAz46R-ROQ
 
 development:
   <<: *defaults
+  js_logging: true
 
 test:
   <<: *defaults
