--- a/config/application.yml
+++ b/config/application.yml
@@ -3,10 +3,15 @@ defaults: &defaults
   host: bremen.dev
   url: http://bremen.dev:3000
   js_logging: false
-  default_latitude: 53.07498
-  default_longitude: 8.8072
   google_maps_api_key: ABQIAAAAcIz016TRYiMH1KvissP1SxS8LUmBBxjxoxaGUy-MjULCj7hntBRRt0mrQ4Gz3FCuoPVPBAz46R-ROQ
   google_analytics_id:
+  default_latitude: 53.07498
+  default_longitude: 8.8072
+  bounding_box:
+    sw_lat: 53.0
+    sw_lng: 8.5
+    ne_lat: 53.3
+    ne_lng: 9.0
   kitas:
     name: Kitas in Bremen
     host: kitas.dev
@@ -25,5 +30,6 @@ production:
   url: http://bremen.innovated.de
   google_analytics_id: UA-376258-23
   kitas:
+    name: Kitas in Bremen
     host: kitas-in-bremen.de
     url: http://kitas-in-bremen.de
